--- a/.env
+++ b/.env
@@ -31,3 +31,6 @@ APP_SECRET=e923e7175bff71b3dd016b1f8f83a042
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+###> symfony/mailer ###
+MAILER_DSN=smtp://mail@yourmail..com:password@smtp.yandex.com:465?encryption=ssl&auth_mode=login
+###< symfony/mailer ###
