--- a/.env
+++ b/.env
@@ -29,8 +29,9 @@ APP_SECRET=e923e7175bff71b3dd016b1f8f83a042
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root@127.0.0.1:3306/webshop?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
-###> symfony/mailer ###
-MAILER_DSN=smtp://mail@yourmail..com:password@smtp.yandex.com:465?encryption=ssl&auth_mode=login
-###< symfony/mailer ###
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://tswiftmailer@gmail.com:testmailer12@default
+###< symfony/google-mailer ###
