--- a/.env
+++ b/.env
@@ -31,7 +31,6 @@ APP_SECRET=e923e7175bff71b3dd016b1f8f83a042
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root@127.0.0.1:3306/webshop?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
-###> symfony/google-mailer ###
-# Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://tswiftmailer@gmail.com:testmailer12@default
-###< symfony/google-mailer ###
+###> symfony/mailer ###
+MAILER_DSN=smtp://tswiftmailer@gmail.com:testmailer12@smtp.gmail.com:465?encryption=ssl&auth_mode=login
+###< symfony/mailer ###
